Optimizacion codigo
update / save / get
